microservices/blog/infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec:
  replicas: 1 # number of pods we want to create running the same image
  selector:
    matchLabels:
      app: client # look at all the pods with a label of app: client
  template: # where we specify the exact configuration of a pod that we want this deployment to create
    metadata:
      labels:
        app: client
    spec: # specification options where the pod that we're trying to make
      containers:
        - name: client
          image: dyrektorek/client
# config to create cluster IP service:
---
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  selector:
    app: client
  type: ClusterIP # it's by default (it's not needed here)
  ports:
    - name: client
      protocol: TCP
      port: 3000
      targetPort: 3000
