microservices/blog/infra/k8s/comments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-depl
spec:
  replicas: 1 # number of pods we want to create running the same image
  selector:
    matchLabels:
      app: comments # look at all the pods with a label of app: comments
  template: # where we specify the exact configuration of a pod that we want this deployment to create
    metadata:
      labels:
        app: comments
    spec: # specification options where the pod that we're trying to make
      containers:
        - name: comments
          image: dyrektorek/comments
# config to create cluster IP service:
---
apiVersion: v1
kind: Service
metadata:
  name: comments-srv
spec:
  selector:
    app: comments
  type: ClusterIP # it's by default (it's not needed here)
  ports:
    - name: comments
      protocol: TCP
      port: 4001
      targetPort: 4001
