microservices/blog/infra/k8s/moderation-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-depl
spec:
  replicas: 1 # number of pods we want to create running the same image
  selector:
    matchLabels:
      app: moderation # look at all the pods with a label of app: moderation
  template: # where we specify the exact configuration of a pod that we want this deployment to create
    metadata:
      labels:
        app: moderation
    spec: # specification options where the pod that we're trying to make
      containers:
        - name: moderation
          image: dyrektorek/moderation
# config to create cluster IP service:
---
apiVersion: v1
kind: Service
metadata:
  name: moderation-srv
spec:
  selector:
    app: moderation
  type: ClusterIP # it's by default (it's not needed here)
  ports:
    - name: moderation
      protocol: TCP
      port: 4003
      targetPort: 4003
